Remove % and () buttons change order of btns Change order of buttons and format to make calculator look correct with the extra space after removing two buttons.

--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ button {
     color: #89794C;
     font-size: 28px;
     margin-bottom: 4px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 #row-1 {
@@ -76,4 +78,9 @@ button {
 #row-5 {
     display: flex;
     justify-content: space-around;
+}
+
+#equal-btn {
+    flex-grow: 1;
+    
 }
